Fix the hidden search button being partially hidden by the search input

--- a/scss/_patterns_search-and-filter.scss
+++ b/scss/_patterns_search-and-filter.scss
@@ -126,6 +126,11 @@
       & > * {
         height: 100%;
       }
+
+      // Make sure the hidden search button appears on top of the input field
+      & > .u-off-screen:focus {
+        z-index: 1;
+      }
     }
 
     .p-search-and-filter__input {
